--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -18,6 +18,35 @@
     <% end %>
 </div>  
 
+<!-- Deployment Configuration dialog  -->
+<div id="deployment-config-modal" class="modal hide fade in" style="display: none; ">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>Deployment Configuration</h3>
+  </div>
+  <div class="modal-body">
+    <div id="deployment-config-error-messages"></div>
+    <%= simple_form_for Environment.new, url: '' , remote: true , html: { id: 'deployment-config-frm'} do |f|%>
+      <div class="row">
+        <div class="span2">
+          <div>
+            <p>Branch / Revision</p>
+            <p><%= text_field_tag 'branch' ,@environment.branch, id: "graph-branch" %></p>
+          </div>
+          <div>
+            <p><%= check_box_tag 'db_migrate', value = "", checked = false %>&nbsp;&nbsp;<span>DB Migrate</span></p>
+          </div>
+        </div>
+      </div>
+    <div id="graph_id" class="hide"></div>
+  </div>
+  <div class="modal-footer">
+    <%= f.button :submit, 'Update Environment', class: "btn btn-success deployment-config-submit" %>
+    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
+  </div>
+    <% end %>
+</div>
+
 <!-- EC2 resource added -->
 <div id="ec2-configuration" class="modal hide fade in instance-config" style="display: none; ">
   <div class="modal-header">  
