--- a/app/views/environments/_project_environment.html.erb
+++ b/app/views/environments/_project_environment.html.erb
@@ -9,6 +9,7 @@
   </li>
   </ul>
 </div>
+<div class="hide" id="repo_url"><%= @project.repo_url %></div>
 <script type="text/javascript">
   $(document).ready(function(){
       $('#environments_list').live('change', function () {
