--- a/app/views/environments/new.html.erb
+++ b/app/views/environments/new.html.erb
@@ -9,7 +9,7 @@
   prepareStage();
 $(document).ready(function(){
   $('input#graph-name').val('<%= params[:environment]['name'] %>');
-  $('input#graph-key-pair-name').val('<%= params[:environment]['key-pair-name'] %>');
-  $('input#graph-security-group-name').val('<%= params[:environment]['group-name'] %>');
+  $('select#graph-key-pair-name').val('<%= params[:environment][:key_pair_name] %>');
+  $('select#graph-security-group-name').val('<%= params[:environment][:security_group] %>');
 });
 </script>
