1. Require only used jquery ui components 2. Refactor super long dialogs partial into smaller partials

--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -1,328 +1,34 @@
+<!-- This is where all the dialogs that popup on Environment drawing area reside -->
+
 <!-- Save Environment -->
-<div id="graph-save-modal" class="modal hide fade in" style="display: none; ">  
-  <div class="modal-header">  
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>Save Environment</h3>
-  </div>  
-  <div class="modal-body">  
-    <div id="graph-save-error-messages"></div>
-    <%= simple_form_for Environment.new, url: project_environments_path(project)  , remote: true, html: { id: 'graph-save-frm'} do |f|%>
-      <%= f.input :name, input_html: { id: 'graph-name', title: 'Name of your environment. Example: production, staging etc.', rel: 'tooltip','data-placement' => "right"}  %>
-      <%= f.input :key_pair_name, include_blank: false, collection: get_key_pairs_select(@key_pairs), input_html: {id: 'graph-key-pair-name', rel: 'tooltip', 'data-placement' => 'right', title: 'Please choose a keypair which you have already created using the AWS console'} %>
-      <%= f.input :security_group, include_blank: false, collection: get_security_groups_select(@security_groups), input_html: {id: 'graph-security-group-name', rel: 'tooltip', 'data-placement' => 'right', title: 'Choose a SecurityGroup for instances of this environment'} %>
-  </div>  
-  <div class="modal-footer">  
-    <%= f.button :submit, 'Save Environment', class: "btn btn-success graph-save-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-  </div>  
-    <% end %>
-</div>  
+<%= render 'save_environment', key_pairs: @key_pairs, security_groups: @security_groups, project: project %>
 
 <!-- Deployment Configuration dialog  -->
-<div id="deployment-config-modal" class="modal hide fade in" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>Deployment Configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="deployment-config-error-messages"></div>
-    <%= simple_form_for Environment.new, url: '' , remote: true , html: { id: 'deployment-config-frm'} do |f|%>
-      <div class="row">
-        <div class="span2">
-          <div>
-            <p>Branch / Revision</p>
-            <p><%= text_field_tag 'branch' ,@environment.branch, id: "graph-branch" %></p>
-          </div>
-          <div>
-            <p><%= check_box_tag 'db_migrate', value = "", checked = false %>&nbsp;&nbsp;<span>DB Migrate</span></p>
-          </div>
-        </div>
-      </div>
-    <div id="graph_id" class="hide"></div>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Update Environment', class: "btn btn-success deployment-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-  </div>
-    <% end %>
-</div>
+<%= render 'deployment_configuration', branch: @environment.branch %>
 
-<!-- EC2 resource added -->
-<div id="ec2-configuration" class="modal hide fade in instance-config" style="display: none; ">
-  <div class="modal-header">  
-    <a class="close" data-dismiss="modal">×</a>  
-    <h3>EC2 instance configuration</h3>
-  </div>  
-  <div class="modal-body">  
-    <div id="ec2-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '', html: { id: 'ec2-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'ec2_label', class: 'instance_label'} %>
-      <%= f.input :ami_id, label: 'AMI', collection: Ami.get_select_collection, input_html: {id: 'ec2_ami_id'}, :prompt => "Select Ami type", :selected => 1%>
-      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'ec2_instance_type_id'} %>
-      <%= hidden_field_tag :ec2_parents_list, ResourceType.find_by_name("EC2").parents_list, :id => 'ec2_parents_list'%>
-      <div>Components :
-        <br />
-         <table style="margin-left: 10px;">
-           <tr>
-             <td><%= check_box_tag 'ec2_web', value = "", checked = false%></td>
-             <td></td>
-             <td>Web Server</td>
-           </tr>
-           <tr>
-             <td><%= check_box_tag 'ec2_app' , value = "", checked = false%></td>
-             <td></td>
-             <td>Application Server</td>
-           </tr>
-           <tr>
-             <td><%= check_box_tag 'ec2_db' , value = "", checked = false%></td>
-             <td></td>
-             <td>DB Server</td>
-           </tr>
-         </table>
-      </div>
-      <div id="ec2_ip_address"></div>
-      <br />
-      <div id="ec2_public_dns"></div>
-      <%= f.hidden_field(:xpos, id: 'ec2_xpos')%>
-      <%= f.hidden_field(:ypos, id: 'ec2_ypos')%>
-  </div>  
-  <div class="modal-footer">  
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>  
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="ec2_delete" onclick='delete_instance("ec2");' title="Delete the EC2 resource">Delete</a>
-  </div>  
-    <% end %>
-</div>
+<!-- EC2 resource  -->
+<%= render 'ec2_configuration' %>
 
-<!-- Rails resource added -->
-<div id="rails-configuration" class="modal hide fade in instance-config" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>Rails instance configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="rails-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '', html: { id: 'rails-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'rails_label', class: 'instance_label'} %>
-      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'rails_instance_type_id'} %>
-      <div id="rails_ip_address"></div>
-      <br />
-      <div id="rails_public_dns"></div>
-      <%= hidden_field_tag :ami_id, Ami.first.id, :id => 'rails_ami_id'%>
-      <%= hidden_field_tag :rails_parents_list, ResourceType.find_by_name("Rails").parents_list, :id => 'rails_parents_list'%>
-      <%= f.hidden_field(:xpos, id: 'rails_xpos')%>
-      <%= f.hidden_field(:ypos, id: 'rails_ypos')%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="rails_delete" onclick='delete_instance("rails");' title="Delete the Ruby on Rails resource">Delete</a>
-  </div>
-    <% end %>
-</div>
+<!-- Rails resource  -->
+<%= render 'rails_configuration' %>
 
-<!-- JAVA resource added -->
-<div id="java-configuration" class="modal hide fade in instance-config" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>JAVA instance configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="java-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '', html: { id: 'java-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'java_label', class: 'instance_label'} %>
-      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'java_instance_type_id'} %>
-      <div id="java_ip_address"></div>
-      <br />
-      <div id="java_public_dns"></div>
-      <%= hidden_field_tag :ami_id, Ami.first.id, :id => 'java_ami_id'%>
-      <%= hidden_field_tag :java_parents_list, ResourceType.find_by_name("JAVA").parents_list, :id => 'java_parents_list'%>
-      <%= f.hidden_field(:xpos, id: 'java_xpos')%>
-      <%= f.hidden_field(:ypos, id: 'java_ypos')%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="java_delete" onclick='delete_instance("java");' title="Delete the Java resource">Delete</a>
-  </div>
-    <% end %>
-</div>
+<!-- JAVA resource  -->
+<%= render 'java_configuration' %>
 
-<!-- PHP resource added -->
-<div id="php-configuration" class="modal hide fade in instance-config" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>PHP instance configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="php-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '', html: { id: 'php-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'php_label', class: 'instance_label'} %>
-      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'php_instance_type_id'} %>
-      <div id="php_ip_address"></div>
-      <br />
-      <div id="php_public_dns"></div>
-      <%= hidden_field_tag :ami_id, Ami.first.id, :id => 'php_ami_id'%>
-      <%= hidden_field_tag :php_parents_list, ResourceType.find_by_name("PHP").parents_list, :id => 'php_parents_list'%>
-      <%= f.hidden_field(:xpos, id: 'php_xpos')%>
-      <%= f.hidden_field(:ypos, id: 'php_ypos')%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="php_delete" onclick='delete_instance("php");' title="Delete the PHP resource">Delete</a>
-  </div>
-    <% end %>
-</div>
+<!-- PHP resource  -->
+<%= render 'php_configuration' %>
 
-<!-- Mysql resource added Needs to be changed-->
-<div id="mysql-configuration" class="modal hide fade in instance-config" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>Mysql instance configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="mysql-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '', html: { id: 'mysql-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'mysql_label', class: 'instance_label'} %>
-      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'mysql_instance_type_id'} %>
-      <div id="mysql_ip_address"></div>
-      <br />
-      <div id="mysql_public_dns"></div>
-      <%= hidden_field_tag :ami_id, Ami.first.id, :id => 'mysql_ami_id'%>
-      <%= hidden_field_tag :mysql_parents_list, ResourceType.find_by_name("Mysql").parents_list, :id => 'mysql_parents_list'%>
-      <%= f.hidden_field(:xpos, id: 'mysql_xpos')%>
-      <%= f.hidden_field(:ypos, id: 'mysql_ypos')%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="mysql_delete" onclick='delete_instance("mysql");' title="Delete the MySQL resource">Delete</a>
-  </div>
-    <% end %>
-</div>
+<!-- Mysql resource  -->
+<%= render 'mysql_configuration' %>
 
-<!-- Nginx resource added Needs to be changed-->
-<div id="nginx-configuration" class="modal hide fade in instance-config" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>Nginx instance configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="nginx-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '', html: { id: 'nginx-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'nginx_label', class: 'instance_label'} %>
-      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'nginx_instance_type_id'} %>
-      <div id="nginx_ip_address"></div>
-      <br />
-      <div id="nginx_public_dns"></div>
-      <%= hidden_field_tag :ami_id, Ami.first.id, :id => 'nginx_ami_id'%>
-      <%= hidden_field_tag :nginx_parents_list, ResourceType.find_by_name("Nginx").parents_list, :id => 'nginx_parents_list'%>
-      <%= f.hidden_field(:xpos, id: 'nginx_xpos')%>
-      <%= f.hidden_field(:ypos, id: 'nginx_ypos')%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="nginx_delete" onclick='delete_instance("nginx");' title="Delete the Nginx resource">Delete</a>
-  </div>
-    <% end %>
-</div>
+<!-- Nginx resource  -->
+<%= render 'nginx_configuration' %>
 
-<!-- RDS resource added Needs to be changed-->
-<div id="rds-configuration" class="modal hide fade in" style="display: none; ">
-  <div class="modal-header">  
-    <a class="close" data-dismiss="modal">×</a>  
-    <h3>RDS instance configuration</h3>
-  </div>  
-  <div class="modal-body">  
-    <div id="rds-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '' , html: { id: 'rds-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'rds_label', class: 'instance_label'} %>
-      <%= f.input :instance_type_id, label: 'Instance Type', collection: InstanceType.get_select_collection('RDS'), input_html: {id: 'rds_instance_type_id'} %>
-      <p>Storage Size in GB</p>
-      <%= text_field_tag 'rds_size' %>
-      <p>Master User Name</p>
-      <%= text_field_tag 'rds_master_user_name' %>
-      <p>Master Password</p>
-      <%= password_field_tag 'rds_master_password' %>
-      <table>
-           <tr>
-             <td><%= check_box_tag 'rds_multiAZ', value = "", checked = false%></td>
-             <td></td>
-             <td></td>
-             <td>Multi AZ</td>
-           </tr>
-      </table>
-      <%= hidden_field_tag :rds_parents_list, ResourceType.find_by_name("RDS").parents_list, :id => 'rds_parents_list'%>
-      <%= f.hidden_field(:xpos, id: 'rds_xpos')%>
-      <%= f.hidden_field(:ypos, id: 'rds_ypos')%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>  
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="rds_delete" onclick='delete_instance("rds");' title="Delete the RDS resource">Delete</a>
-  </div>
-  <% end %>
-</div>  
+<!-- RDS resource  -->
+<%= render 'rds_configuration' %>
 
-<!-- ELB resource added -->
-<div id="elb-configuration" class="modal hide fade in" style="display: none; ">
-  <div class="modal-header">  
-    <a class="close" data-dismiss="modal">×</a>  
-    <h3>ELB instance configuration</h3>
-  </div>  
-  <div class="modal-body">  
-    <div id="elb-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '' , html: { id: 'elb-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'elb_label', class: 'instance_label'} %>
-      <div id="elb_ip_address"></div>
-      <br />
-      <div id="elb_public_dns"></div>
-      <%= hidden_field_tag :elb_parents_list, ResourceType.find_by_name("ELB").parents_list, :id => 'elb_parents_list'%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="elb_delete" onclick='delete_instance("elb");' title="Delete the ELB resource">Delete</a>
-  </div>
-  <% end %>
-</div>  
+<!-- ELB resource  -->
+<%= render 'elb_configuration' %>
 
-<!-- EC resource added -->
-<div id="ec-configuration" class="modal hide fade in" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>EC instance configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="ec-config-error-messages"></div>
-    <%= simple_form_for Instance.new, url: '' , html: { id: 'ec-config-frm'} do |f|%>
-      <%= f.input :label, input_html: { id: 'ec_label', class: 'instance_label'} %>
-      <%#= hidden_field_tag :ec_parents_list, ResourceType.find_by_name("EC").parents_list, :id => 'ec_parents_list'%>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-    <a class="btn btn-danger hide pull-left" data-dismiss="modal" id="ec_delete" onclick='delete_instance("ec");' title="Delete the ElastiCache resource">Delete</a>
-  </div>
-  <% end %>
-</div>
-
-<!-- Rails component added -->
-<div id="rails-configuration" class="modal hide fade in" style="display: none; ">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>Rails Component configuration</h3>
-  </div>
-  <div class="modal-body">
-    <div id="rails-config-error-messages"></div>
-    <%= simple_form_for Component.new, url: '' , html: { id: 'rails-config-frm'} do |f|%>
-      <%= f.input :name, input_html: { id: 'rails_name', class: 'instance_label'} %>
-  </div>
-  <div class="modal-footer">
-    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
-    <a href="#" class="btn btn-inverse" data-dismiss="modal">Close</a>
-  </div>
-  <% end %>
-</div>
+<!-- EC resource  -->
+<%= render 'elasticache_configuration' %>
