changes done for display db migrate field

--- a/app/views/environments/_deployment_configuration.html.erb
+++ b/app/views/environments/_deployment_configuration.html.erb
@@ -13,7 +13,7 @@
             <p><%= text_field_tag 'branch' ,branch, id: "graph-branch" %></p>
           </div>
           <div>
-            <p><%= check_box_tag 'db_migrate', value = "", checked = false %>&nbsp;&nbsp;<span>DB Migrate</span></p>
+            <p><%= check_box_tag 'db_migrate', value = "", checked = db_migrate %>&nbsp;&nbsp;<span>DB Migrate</span></p>
           </div>
         </div>
       </div>
